--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
+main {
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+h2 {
+  font-weight: 700;
+  color: #293264;
+}
+
+button {
+  width: 193px;
+  height: 52px;
+  background: #4d5b9e;
+  border-radius: 15px;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #f5f7fb;
+  cursor: pointer;
+  border: none;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -20,21 +45,7 @@
   line-height: 19px;
   text-align: center;
   color: #293264;
-  margin-top: 1em;
-}
-
-.container--button {
-  width: 193px;
-  height: 52px;
-  background: #4d5b9e;
-  border-radius: 15px;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  color: #f5f7fb;
-  margin-top: 2em;
-  cursor: pointer;
+  margin: 1em 0;
 }
 
 .blob-5,
@@ -52,6 +63,31 @@
   left: 0;
 }
 
-hr {
-  margin-top: 10px;
+.container--question {
+  margin-bottom: 30px;
+}
+
+.container--answers {
+  display: flex;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.answer {
+  padding: 0.5em 1em;
+  border: 1px solid #4d5b9e;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.btn--container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.score {
+  font-size: 18px;
+  font-weight: 700;
+  margin-right: 40px;
 }
