Added mobile stylings

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,6 @@ body {
   align-items: center;
   font-family: 'Karla', sans-serif;
   min-height: 100vh;
+  overflow-x: scroll;
+  padding: 0 1em;
 }
