--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-main {
-  margin: 0 auto;
-}
-
 h2 {
   color: #293264;
 }
@@ -20,6 +16,10 @@ button {
   border: none;
 }
 
+main {
+  min-width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -35,7 +35,6 @@ button {
 }
 
 .container--description {
-  font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
