--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'Karla', sans-serif;
+  padding: 0.5em 2em;
   min-height: 100vh;
-  padding: 0 1em;
+  min-width: 110%;
 }
