--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,11 @@
 
 body {
   background-color: #f5f7fb;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 1em 2em;
   font-family: 'Karla', sans-serif;
-  padding: 0.5em 2em;
   min-height: 100vh;
-  min-width: 110%;
+  max-width: 90%;
+  margin: 0 auto;
+  background-image: url('../public/memphis-colorful.png');
+  background-blend-mode: lighten;
 }
